--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -36,8 +36,8 @@ jobs:
   # static checker needs tracee-ebpf compiled because of golang build check
   # without tracee-ebpf being built, it fails because of missing CGO prereqs
   # also: can't use default checker github action because tracee needs env vars
-  check-code:
-    name: "Check Code"
+  analyze-code:
+    name: "Analyze Code"
     needs:
       - verify-code
     runs-on: ubuntu-20.04
@@ -51,14 +51,19 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
           opa-version: ${{ env.OPA_VERSION }}
-      - name: Install Static Checker
-        run: |
-          go install honnef.co/go/tools/cmd/staticcheck@latest
-      - name: Build Tracee for Checker
+      - name: Build Tracee
         run: |
           make clean
           make tracee-ebpf
-      - name: Check Code Statically
+      - name: Run go-vet
+        run: |
+          CGO_CFLAGS="-I$(pwd)/dist/libbpf" \
+          CGO_LDFLAGS="-lelf -lz $(pwd)/dist/libbpf/libbpf.a" \
+          go vet -tags ebpf,core ./...
+      - name: Install staticcheck
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+      - name: Run staticcheck
         run: |
           CGO_CFLAGS="-I$(pwd)/dist/libbpf" \
           CGO_LDFLAGS="-lelf -lz $(pwd)/dist/libbpf/libbpf.a" \
@@ -84,7 +89,7 @@ jobs:
   run-integration-tests:
     name: "Run Integration Tests"
     needs:
-      - check-code
+      - analyze-code
       - run-unit-tests
     runs-on: ubuntu-20.04
     steps:
@@ -104,7 +109,7 @@ jobs:
   verify-signatures:
     name: Verify Signatures
     needs:
-      - check-code
+      - analyze-code
       - run-unit-tests
     runs-on: ubuntu-20.04
     steps:
