workflows: fix non co-re job names

--- a/.github/workflows/test-noncore-daily.yaml
+++ b/.github/workflows/test-noncore-daily.yaml
@@ -8,7 +8,7 @@ on:
     # At 02:00 every day
     - cron: '0 2 * * *'
 jobs:
-  CO-RE:
+  NON-CO-RE:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
