--- a/.github/workflows/test-noncore-weekly.yaml
+++ b/.github/workflows/test-noncore-weekly.yaml
@@ -8,7 +8,7 @@ on:
     # At 02:00 on Saturdays
     - cron: '0 2 * * 6'
 jobs:
-  CO-RE:
+  NON-CO-RE:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
