--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -210,14 +210,15 @@ jobs:
       matrix:
         signature:
           - "TRC-2"
-        kernel:
-          - "4.19.238-stable"
-          - "5.4.166-ubuntu+"
-          - "5.4.188-amzn2"
-          - "5.8.18-ubuntu"
-          - "5.10.111-stable"
-          - "5.11.22-fedora32"
-          - "5.13.19-ubuntu"
+        distro:
+          - "stream8"
+          - "stream9"
+          - "fedora34"
+          - "fedora35"
+          - "fedora36"
+          - "focal"
+          - "focalhwe"
+          - "jammy"
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -225,15 +226,14 @@ jobs:
           submodules: true
       - name: "Pull test container image"
         run: |
-          docker image pull rafaeldtinoco/tracee-test-kernels:latest
+          docker image pull rafaeldtinoco/tracee-distro-tester:${{ matrix.distro }}
       - name: "Run tests"
         run: |
           docker run --rm --privileged -v $(pwd):/tracee:rw \
             -e kvm_accel="tcg" \
-            -e kern_version=${{ matrix.kernel }} \
             -e test_name=${{ matrix.signature }} \
-            -e is_noncore=0 \
-            -t rafaeldtinoco/tracee-test-kernels:latest
+            -e non_core=0 \
+            -t rafaeldtinoco/tracee-distro-tester:${{ matrix.distro }}
   NON-CO-RE:
     runs-on: ubuntu-20.04
     needs:
@@ -243,14 +243,15 @@ jobs:
       matrix:
         signature:
           - "TRC-2"
-        kernel:
-          - "4.19.238-stable"
-          - "5.4.166-ubuntu+"
-          - "5.4.188-amzn2"
-          - "5.8.18-ubuntu"
-          - "5.10.111-stable"
-          - "5.11.22-fedora32"
-          - "5.13.19-ubuntu"
+        distro:
+          - "stream8"
+          - "stream9"
+          - "fedora34"
+          - "fedora35"
+          - "fedora36"
+          - "focal"
+          - "focalhwe"
+          - "jammy"
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
@@ -258,12 +259,11 @@ jobs:
           submodules: true
       - name: "Pull test container image"
         run: |
-          docker image pull rafaeldtinoco/tracee-test-kernels:latest
+          docker image pull rafaeldtinoco/tracee-distro-tester:${{ matrix.distro }}
       - name: "Run tests"
         run: |
           docker run --rm --privileged -v $(pwd):/tracee:rw \
             -e kvm_accel="tcg" \
-            -e kern_version=${{ matrix.kernel }} \
             -e test_name=${{ matrix.signature }} \
-            -e is_noncore=1 \
-            -t rafaeldtinoco/tracee-test-kernels:latest
+            -e non_core=1 \
+            -t rafaeldtinoco/tracee-distro-tester:${{ matrix.distro }}
