--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -203,7 +203,7 @@ jobs:
   # Test: TRC-2 with selected kernels.
   #
   CO-RE:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     needs:
       - smoke-test-core
     strategy:
@@ -225,20 +225,21 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: "Pull test container image"
-        run: |
-          distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
-          docker image pull rafaeldtinoco/tracee-distro-tester:$distro
+      #- name: "Pull test container image"
+      #  run: |
+      #    distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
+      #    docker image pull rafaeldtinoco/tracee-distro-tester:$distro
       - name: "Run tests"
         run: |
           distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
           docker run --rm --privileged -v $(pwd):/tracee:rw \
-            -e kvm_accel="tcg" \
+            -e kvm_accel="kvm" \
             -e test_name=${{ matrix.signature }} \
             -e non_core=0 \
+            -e cpus=8 -e mem=4 \
             -t rafaeldtinoco/tracee-distro-tester:$distro
   NON-CO-RE:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     needs:
       - smoke-test-noncore
     strategy:
@@ -260,15 +261,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: "Pull test container image"
-        run: |
-          distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
-          docker image pull rafaeldtinoco/tracee-distro-tester:$distro
+      #- name: "Pull test container image"
+      #  run: |
+      #    distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
+      #    docker image pull rafaeldtinoco/tracee-distro-tester:$distro
       - name: "Run tests"
         run: |
           distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
           docker run --rm --privileged -v $(pwd):/tracee:rw \
-            -e kvm_accel="tcg" \
+            -e kvm_accel="kvm" \
             -e test_name=${{ matrix.signature }} \
             -e non_core=1 \
+            -e cpus=8 -e mem=4 \
             -t rafaeldtinoco/tracee-distro-tester:$distro
+          
