--- a/.github/workflows/test-core-weekly.yaml
+++ b/.github/workflows/test-core-weekly.yaml
@@ -9,7 +9,7 @@ on:
     - cron: '0 4 * * 6'
 jobs:
   CO-RE:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     strategy:
       fail-fast: false
       matrix:
@@ -39,15 +39,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: "Pull test container image"
-        run: |
-          distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
-          docker image pull rafaeldtinoco/tracee-distro-tester:$distro
+      #- name: "Pull test container image"
+      #  run: |
+      #    distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
+      #    docker image pull rafaeldtinoco/tracee-distro-tester:$distro
       - name: "Run tests"
         run: |
           distro=$(echo ${{ matrix.distro }} | cut -d'-' -f1)
           docker run --rm --privileged -v $(pwd):/tracee:rw \
-            -e kvm_accel="tcg" \
+            -e kvm_accel="kvm" \
             -e test_name=${{ matrix.signature }} \
             -e non_core=0 \
+            -e cpus=8 -e mem=4 \
             -t rafaeldtinoco/tracee-distro-tester:$distro
