--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -46,6 +47,12 @@ spec:
             - name: etc-os-release
               mountPath: /etc/os-release-host
               readOnly: true
+            {{- if .Values.signatures.config }}
+            - name: tracee-config
+              mountPath: /tracee/rules/signatures.yaml
+              subPath: signatures.yaml
+              readOnly: true
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
@@ -61,9 +68,29 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       volumes:
-        - hostPath:
+        - name: tmp-tracee
+          hostPath:
             path: /tmp/tracee
-          name: tmp-tracee
-        - hostPath:
+        - name: etc-os-release
+          hostPath:
             path: /etc/os-release
-          name: etc-os-release
+        {{- if .Values.signatures.config }}
+        - name: tracee-config
+          configMap:
+            name: tracee-config
+            items:
+              - key: signatures.yaml
+                path: signatures.yaml
+        {{- end }}
+{{- if .Values.signatures.config }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: tracee-config
+  labels:
+    {{- include "tracee.labels" . | nindent 4 }}
+data:
+  signatures.yaml: |-
+    {{- toYaml .Values.signatures.config | nindent 4 }}
+{{- end }}
