--- a/.github/workflows/test-core-weekly.yaml
+++ b/.github/workflows/test-core-weekly.yaml
@@ -7,6 +7,9 @@ on:
   schedule:
     # At 04:00 on Saturdays
     - cron: '0 4 * * 6'
+  pull_request:
+    branches:
+      - main
 jobs:
   CO-RE:
     runs-on: self-hosted
