distro-tester: allow non virtiofs kernels to be tested
- this change allows GKE kernels to be tested

--- a/tests/distro-tester/Dockerfile
+++ b/tests/distro-tester/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:impish
+FROM ubuntu:jammy
 
 ARG IMAGE
 
@@ -7,6 +7,7 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get dist-upgrade -y && \
     apt-get install -y --no-install-recommends coreutils findutils && \
     apt-get install -y --no-install-recommends bash vim curl rsync git && \
+    apt-get install -y --no-install-recommends iproute2 openssh-client && \
     apt-get install -y --no-install-recommends ssl-cert ca-certificates && \
     apt-get install -y --no-install-recommends qemu-system-x86 qemu-utils
 
@@ -19,8 +20,7 @@ RUN mkdir -p /tracee && \
     echo "export PS1=\"\u@\h \w $ \"" > /root/.bashrc && \
     echo "alias ls=\"ls --color\"" >> /root/.bashrc && \
     ln -s /root/.bashrc /root/.profile && \
-    git config --global --add safe.directory /tracee && \
-    ln -s /tester/images-copy/$IMAGE /tester/images/$IMAGE
+    git config --global --add safe.directory /tracee
 
 ENV IMAGE=$IMAGE
 
