--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ coverage.txt
 # ignore local and temporary packaging files
 debian
 .ubuntu*
+
+# ignore Helm subcharts
+deploy/helm/tracee/charts/
