DO NOT MERGE - run daily tests
Signed-off-by: grantseltzer <grantseltzer@gmail.com>

--- a/.github/workflows/test-core-daily.yaml
+++ b/.github/workflows/test-core-daily.yaml
@@ -3,6 +3,9 @@
 #
 name: CO-RE (DAILY)
 on:
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: {}
   schedule:
     # At 04:00 every day
