--- a/.github/workflows/test-noncore-daily.yaml
+++ b/.github/workflows/test-noncore-daily.yaml
@@ -3,6 +3,9 @@
 #
 name: NON CO-RE (DAILY)
 on:
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: {}
   schedule:
     # At 06:00 every day
