mkdocs: expand menu by default
[skip actions]

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,7 +67,7 @@ theme:
     language: 'en'
     logo: images/tracee_logo_only.png
     features:
-      # - navigation.expand
+      - navigation.expand
       - navigation.instant
 
 markdown_extensions:
