--- a/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
+++ b/deploy/kubernetes/tracee-falcosidekick/tracee.yaml
@@ -17,7 +17,7 @@ spec:
       name: tracee
     spec:
       containers:
-      - image: docker.io/aquasec/tracee:v0.7.0
+      - image: docker.io/aquasec/tracee:0.8.0
         imagePullPolicy: IfNotPresent
         args:
           - --webhook http://tracee-webhook:2801 --webhook-template ./templates/falcosidekick.tmpl --webhook-content-type application/json
