--- a/deploy/kubernetes/tracee-postee/tracee.yaml
+++ b/deploy/kubernetes/tracee-postee/tracee.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: tracee
-        image: docker.io/aquasec/tracee:v0.7.0
+        image: docker.io/aquasec/tracee:0.8.0
         imagePullPolicy: IfNotPresent
         args:
           - --webhook=http://postee-svc:8082
