integration: recomission the tests
Integration tests were  previously skipped and as such unmaintained
and were broken over time.
Fix the tests by redesigning them to locally run tracee.

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -89,7 +89,7 @@ jobs:
           opa-version: ${{ env.OPA_VERSION }}
       - name: Run Integration Tests
         run: |
-          make test-integration
+          sudo env "PATH=$PATH" make test-integration
   VERIFY-SIGNATURES:
     name: Verify Signatures
     needs:
