--- a/deploy/kubernetes/tracee-postee/kustomization.yaml
+++ b/deploy/kubernetes/tracee-postee/kustomization.yaml
@@ -1,6 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   - tracee.yaml
 images:
-  - name: docker.io/aquasec/tracee:v0.8.0
+  - name: docker.io/aquasec/tracee
     newName: tracee
     newTag: latest
