feat: add k8s liveness probe
Add liveness probe for k8s to know if tracee ebpf and rules
are healthy.

Signed-off-by: Jose Donizetti <jdbjunior@gmail.com>

--- a/deploy/helm/tracee/templates/daemonset.yaml
+++ b/deploy/helm/tracee/templates/daemonset.yaml
@@ -39,6 +39,8 @@ spec:
           env:
             - name: LIBBPFGO_OSRELEASE_FILE
               value: /etc/os-release-host
+            - name: LIBBPFGO_OSRELEASE_FILE
+              value: "true"
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           volumeMounts:
