--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -120,6 +120,7 @@ COPY --from=tracee-make /tracee/dist/tracee-ebpf /tracee
 COPY --from=tracee-make /tracee/dist/tracee-rules /tracee
 COPY --from=tracee-make /tracee/dist/rules/ /tracee/rules/
 COPY --from=tracee-make /tracee/builder/entrypoint.sh /tracee/entrypoint.sh
+COPY --from=tracee-make /tracee/builder/healthz.sh /tracee/healthz.sh
 COPY --from=tracee-make /tracee/cmd/tracee-rules/templates/ /tracee/templates/
 
 ENTRYPOINT ["/tracee/entrypoint.sh"]
@@ -139,6 +140,7 @@ COPY --from=tracee-make /tracee/dist/tracee-ebpf /tracee
 COPY --from=tracee-make /tracee/dist/tracee-rules /tracee
 COPY --from=tracee-make /tracee/dist/rules/ /tracee/rules
 COPY --from=tracee-make /tracee/builder/entrypoint.sh /tracee/entrypoint.sh
+COPY --from=tracee-make /tracee/builder/healthz.sh /tracee/healthz.sh
 COPY --from=tracee-make /tracee/cmd/tracee-rules/templates/ /tracee/templates/
 
 ENTRYPOINT ["/tracee/entrypoint.sh"]
