--- a/deploy/kubernetes/tracee-postee/tracee.yaml
+++ b/deploy/kubernetes/tracee-postee/tracee.yaml
@@ -28,6 +28,8 @@ spec:
         env:
           - name: LIBBPFGO_OSRELEASE_FILE
             value: /etc/os-release-host
+          - name: TRACEE_HEALTHZ
+            value: "true"
         securityContext:
           privileged: true
         volumeMounts:
